--- a/pages/types.html
+++ b/pages/types.html
@@ -616,7 +616,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Water (3/3/0)
+<!--  TODO:    1 ▶ Water (3/3/0) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Water.png" alt="Water"></th>
 
@@ -720,7 +720,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Wind (4/3/1) <-
+<!--  TODO:    1 ▶ Wind (3/3/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Wind.png" alt="Wind"></th>
 
@@ -733,7 +733,7 @@
 <!-- Sand --> <td>?</td>
 <!-- Earth --> <td>-</td>
 <!-- Rock --> <td>-</td>
-<!-- Ice --> <td>+</td>
+<!-- Ice --> <td>?+</td>
 <!-- Metal --> <td>0</td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td>+</td>
@@ -876,7 +876,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Rock (5/6/-1)
+<!--  TODO:    1 ▶ Rock (5/5/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Rock.png" alt="Rock"></th>
 
@@ -897,7 +897,7 @@
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
-<!-- Aura --> <td>-c</td>
+<!-- Aura --> <td>?-</td>
 <!-- Psychic --> <td></td>
 <!-- Magic --> <td></td>
 
@@ -928,7 +928,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Ice (8/8/0)
+<!--  TODO:    1 ▶ Ice (8/7/1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Ice.png" alt="Ice"></th>
 
@@ -937,7 +937,7 @@
 <!-- Fire --> <td>+c</td>
 <!-- Water --> <td>-c</td>
 <!-- Electric --> <td>?+</td>
-<!-- Wind --> <td>-c</td>
+<!-- Wind --> <td>?-</td>
 <!-- Sand --> <td></td>
 <!-- Earth --> <td>-d</td>
 <!-- Rock --> <td>+</td>
@@ -945,7 +945,7 @@
 <!-- Metal --> <td>+</td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td>+d</td>
-<!-- Time --> <td>?-</td>
+<!-- Time --> <td></td>
 
 <!-- Light --> <td>-</td>
 <!-- Dark --> <td></td>
@@ -1136,7 +1136,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Time (4/4/0) <-
+<!--  TODO:    1 ▶ Time (4/5/-1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Time.png" alt="Time"></th>
 
@@ -1149,7 +1149,7 @@
 <!-- Sand --> <td></td>
 <!-- Earth --> <td>+st</td>
 <!-- Rock --> <td></td>
-<!-- Ice --> <td>?+</td>
+<!-- Ice --> <td></td>
 <!-- Metal --> <td></td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
@@ -1157,7 +1157,7 @@
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
-<!-- Aura --> <td></td>
+<!-- Aura --> <td>-d*</td>
 <!-- Psychic --> <td></td>
 <!-- Magic --> <td>-st</td>
 
@@ -1192,7 +1192,7 @@
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Light.png" alt="Light"></th>
 
-<!-- Normal --> <td>0</td>
+<!-- Normal --> <td>0!</td>
 
 <!-- Fire --> <td>?-</td>
 <!-- Water --> <td></td>
@@ -1207,7 +1207,7 @@
 <!-- Gravity --> <td></td>
 <!-- Time --> <td></td>
 
-<!-- Light --> <td>n-</td>
+<!-- Light --> <td></td>
 <!-- Dark --> <td>+</td>
 <!-- Aura --> <td></td>
 <!-- Psychic --> <td></td>
@@ -1246,7 +1246,7 @@
 
 <!-- Normal --> <td></td>
 
-<!-- Fire --> <td>-</td>
+<!-- Fire --> <td>-c</td>
 <!-- Water --> <td></td>
 <!-- Electric --> <td></td>
 <!-- Wind --> <td></td>
@@ -1260,10 +1260,10 @@
 <!-- Time --> <td></td>
 
 <!-- Light --> <td>-</td>
-<!-- Dark --> <td>n-</td>
-<!-- Aura --> <td>+</td>
-<!-- Psychic --> <td>+</td>
-<!-- Magic --> <td>+</td>
+<!-- Dark --> <td></td>
+<!-- Aura --> <td>+c</td>
+<!-- Psychic --> <td>+c</td>
+<!-- Magic --> <td>+c</td>
 
 <!-- Chemical --> <td>+d</td>
 <!-- Blade --> <td></td>
@@ -1275,7 +1275,7 @@
 <!-- Fighter --> <td></td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td></td>
-<!-- Ghost --> <td>n-</td>
+<!-- Ghost --> <td></td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -1304,20 +1304,20 @@
 <!-- Wind --> <td></td>
 <!-- Sand --> <td></td>
 <!-- Earth --> <td></td>
-<!-- Rock --> <td>+</td>
+<!-- Rock --> <td>?+</td>
 <!-- Ice --> <td>?-</td>
 <!-- Metal --> <td></td>
 <!-- Sound --> <td>-</td>
 <!-- Gravity --> <td></td>
-<!-- Time --> <td></td>
+<!-- Time --> <td>+*</td>
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td>-</td>
 <!-- Aura --> <td></td>
-<!-- Psychic --> <td>+</td>
+<!-- Psychic --> <td>+*</td>
 <!-- Magic --> <td></td>
 
-<!-- Chemical --> <td>-*</td>
+<!-- Chemical --> <td>-d*</td>
 <!-- Blade --> <td></td>
 <!-- Shot --> <td></td>
 <!-- Hi-Tech --> <td></td>
@@ -1327,7 +1327,7 @@
 <!-- Fighter --> <td></td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td></td>
-<!-- Ghost --> <td>+</td>
+<!-- Ghost --> <td>+bp</td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -1344,11 +1344,11 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Psychic (6/6/0)
+<!--  TODO:    1 ▶ Psychic (5/6/-1)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Psychic.png" alt="Psychic"></th>
 
-<!-- Normal --> <td>+*</td>
+<!-- Normal --> <td>+d*</td>
 
 <!-- Fire --> <td>?-</td>
 <!-- Water --> <td></td>
@@ -1365,18 +1365,18 @@
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td>-</td>
-<!-- Aura --> <td>-d</td>
+<!-- Aura --> <td>-d*</td>
 <!-- Psychic --> <td></td>
 <!-- Magic --> <td>-d</td>
 
-<!-- Chemical --> <td>-*</td>
-<!-- Blade --> <td>+*</td>
+<!-- Chemical --> <td>-d*</td>
+<!-- Blade --> <td>+d*</td>
 <!-- Shot --> <td>?+</td>
-<!-- Hi-Tech --> <td>+</td>
+<!-- Hi-Tech --> <td>n+</td>
 <!-- Digital --> <td class="Digital"></td>
 <!-- Robot --> <td class="Robot">++</td>
 
-<!-- Fighter --> <td>+*</td>
+<!-- Fighter --> <td>+d*</td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td></td>
 <!-- Ghost --> <td>-</td>
@@ -1418,10 +1418,10 @@
 <!-- Light --> <td></td>
 <!-- Dark --> <td>-</td>
 <!-- Aura --> <td></td>
-<!-- Psychic --> <td>+</td>
+<!-- Psychic --> <td>+h!</td>
 <!-- Magic --> <td></td>
 
-<!-- Chemical --> <td>-*</td>
+<!-- Chemical --> <td>-d*</td>
 <!-- Blade --> <td></td>
 <!-- Shot --> <td></td>
 <!-- Hi-Tech --> <td></td>
@@ -1429,7 +1429,7 @@
 <!-- Robot --> <td class="Robot"></td>
 
 <!-- Fighter --> <td></td>
-<!-- Flying --> <td>+</td>
+<!-- Flying --> <td>+h!</td>
 <!-- Plant --> <td></td>
 <!-- Ghost --> <td>-</td>
 
@@ -1460,9 +1460,9 @@
 <!-- Wind --> <td></td>
 <!-- Sand --> <td>?-</td>
 <!-- Earth --> <td>?-</td>
-<!-- Rock --> <td>-st</td>
-<!-- Ice --> <td>- & -st</td>
-<!-- Metal --> <td>-st</td>
+<!-- Rock --> <td>-st!</td>
+<!-- Ice --> <td>- & -st!</td>
+<!-- Metal --> <td>-st!</td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
 <!-- Time --> <td></td>
@@ -1473,17 +1473,17 @@
 <!-- Psychic --> <td>+st</td>
 <!-- Magic --> <td>+st</td>
 
-<!-- Chemical --> <td>n-st</td>
+<!-- Chemical --> <td></td>
 <!-- Blade --> <td></td>
 <!-- Shot --> <td></td>
 <!-- Hi-Tech --> <td>?-</td>
 <!-- Digital --> <td class="Digital"></td>
-<!-- Robot --> <td class="Robot">-st</td>
+<!-- Robot --> <td class="Robot">-st!</td>
 
 <!-- Fighter --> <td></td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td></td>
-<!-- Ghost --> <td>-st</td>
+<!-- Ghost --> <td>-st!</td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -1604,7 +1604,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Hi-Tech (6/6/0) <+
+<!--  TODO:    1 ▶ Hi-Tech (6/5/1) 
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Hi-Tech.png" alt="Hi-Tech"></th>
 
@@ -1621,12 +1621,12 @@
 <!-- Metal --> <td></td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
-<!-- Time --> <td>+d</td>
+<!-- Time --> <td>+*</td>
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
 <!-- Aura --> <td></td>
-<!-- Psychic --> <td>-d</td>
+<!-- Psychic --> <td>n+*</td>
 <!-- Magic --> <td></td>
 
 <!-- Chemical --> <td>?+</td>
@@ -1730,7 +1730,7 @@
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
 <!-- Aura --> <td></td>
-<!-- Psychic --> <td>↓↓d</td>
+<!-- Psychic --> <td>-c & +*</td>
 <!-- Magic --> <td></td>
 
 <!-- Chemical --> <td>+d</td>
@@ -1871,10 +1871,10 @@
 <!-- Normal --> <td></td>
 
 <!-- Fire --> <td>-</td>
-<!-- Water --> <td>+*</td>
+<!-- Water --> <td>+d*</td>
 <!-- Electric --> <td>+</td>
 <!-- Wind --> <td></td>
-<!-- Sand --> <td>+*</td>
+<!-- Sand --> <td>+d*</td>
 <!-- Earth --> <td>-d</td>
 <!-- Rock --> <td></td>
 <!-- Ice --> <td>-d</td>
@@ -1883,7 +1883,7 @@
 <!-- Gravity --> <td>+d</td>
 <!-- Time --> <td></td>
 
-<!-- Light --> <td>+*</td>
+<!-- Light --> <td>+d*</td>
 <!-- Dark --> <td></td>
 <!-- Aura --> <td></td>
 <!-- Psychic --> <td></td>
@@ -1936,7 +1936,7 @@
 <!-- Time --> <td></td>
 
 <!-- Light --> <td>-</td>
-<!-- Dark --> <td>n-</td>
+<!-- Dark --> <td></td>
 <!-- Aura --> <td>-</td>
 <!-- Psychic --> <td>+</td>
 <!-- Magic --> <td>+</td>
@@ -1951,7 +1951,7 @@
 <!-- Fighter --> <td></td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td></td>
-<!-- Ghost --> <td>n-</td>
+<!-- Ghost --> <td></td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -4564,43 +4564,47 @@
         
             if(td.textContent === '++'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/++.png" alt="++">' }
             if(td.textContent === '+'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+.png" alt="+">' }
+            if(td.textContent === '+*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+*.png" alt="+">' }
             if(td.textContent === 'n+'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n+.png" alt="+">' }
+            if(td.textContent === 'n+*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n+*.png" alt="+">' }
             if(td.textContent === '+st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+st.png" alt="+">' }
             // if(td.textContent === 'sk'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/sk.png" alt="+">' }
-            if(td.textContent === '+b'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+b.png" alt="+">' }
+            // if(td.textContent === '+b'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+b.png" alt="+">' }
             if(td.textContent === '+c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+c.png" alt="+">' }
             if(td.textContent === '+h'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+h.png" alt="+">' }
-            if(td.textContent === 'nc'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nc.png" alt="c">' }
+            if(td.textContent === '+h!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+h!.png" alt="+">' }
+            // if(td.textContent === 'nc'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nc.png" alt="c">' }
             if(td.textContent === '+bp'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+bp.png" alt="+">' }
-            if(td.textContent === 'nbs'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nbs.png" alt="bs">' }
-            if(td.textContent === 'bb'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/bb.png" alt="bb">' }
-            if(td.textContent === 'nbb'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nbb.png" alt="bb">' }
+            // if(td.textContent === 'nbs'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nbs.png" alt="bs">' }
+            // if(td.textContent === 'bb'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/bb.png" alt="bb">' }
+            // if(td.textContent === 'nbb'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nbb.png" alt="bb">' }
             if(td.textContent === '+ & +st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+ & +st.png" alt="+">' }
             if(td.textContent === '- & +st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & +st.png" alt="+-">' }
+            if(td.textContent === '-c & +*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-c & +*.png" alt="+-">' }
             if(td.textContent === '-'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-.png" alt="-">' }
             if(td.textContent === 'n-'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n-.png" alt="-">' }
-            if(td.textContent === '-*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-*.png" alt="-">' }
+            // if(td.textContent === '-*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-*.png" alt="-">' }
             if(td.textContent === '-st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-st.png" alt="-">' }
-            if(td.textContent === 'n-st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n-st.png" alt="-">' }
+            // if(td.textContent === 'n-st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n-st.png" alt="-">' }
             if(td.textContent === '-st!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-st!.png" alt="-">' }
-            if(td.textContent === '-b'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-b.png" alt="-">' }
+            // if(td.textContent === '-b'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-b.png" alt="-">' }
             if(td.textContent === '-c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-c.png" alt="-">' }
             if(td.textContent === '-h*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-h*.png" alt="-">' }
-            if(td.textContent === 's'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/s.png" alt="s">' }
-            if(td.textContent === 'ns'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/ns.png" alt="s">' }
+            // if(td.textContent === 's'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/s.png" alt="s">' }
+            // if(td.textContent === 'ns'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/ns.png" alt="s">' }
             if(td.textContent === '0'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/0.png" alt="0">' }
             if(td.textContent === 'n0'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n0.png" alt="0">' }
             if(td.textContent === '0!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/0!.png" alt="0">' }
             if(td.textContent === '>'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/>.png" alt=">">' }
-            if(td.textContent === 'n>'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n>.png" alt=">">' }
+            // if(td.textContent === 'n>'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n>.png" alt=">">' }
             if(td.textContent === '>*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/>*.png" alt=">">' }
             if(td.textContent === 'x'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/x.png" alt="x">' }
-            if(td.textContent === 'nx'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nx.png" alt="x">' }
-            if(td.textContent === 'w'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/w.png" alt="-">' }
-            if(td.textContent === 'x*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/x*.png" alt="x">' }
+            // if(td.textContent === 'nx'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nx.png" alt="x">' }
+            // if(td.textContent === 'w'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/w.png" alt="-">' }
+            // if(td.textContent === 'x*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/x*.png" alt="x">' }
             if(td.textContent === '- & -st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & -st.png" alt="-">' }
-            // if(td.textContent === '?+'){ td.innerHTML = '' }
-            // if(td.textContent === '?-'){ td.innerHTML = '' }
+            if(td.textContent === '- & -st!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & -st!.png" alt="-">' }
+
 
             /* Ocultar observações na tabela: */
             if(
