--- a/pages/types.html
+++ b/pages/types.html
@@ -591,7 +591,7 @@
 
 <!-- Chemical --> <td>-d</td>
 <!-- Blade --> <td></td>
-<!-- Shot --> <td>+d*</td>
+<!-- Shot --> <td>+st</td>
 <!-- Hi-Tech --> <td>+st</td>
 <!-- Digital --> <td class="Digital"></td>
 <!-- Robot --> <td class="Robot">+ & +st</td>
@@ -616,7 +616,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Water (3/3/0) <-
+<!--  TODO:    1 ▶ Water (3/3/0)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Water.png" alt="Water"></th>
 
@@ -720,7 +720,7 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Wind (3/3/0)
+<!--  TODO:    1 ▶ Wind (3/3/0) <-
 ◈──────────────────────────────────────────────────────◈ -->
 <tr><th scope="row"><img class="type_icon" src="../images/game/icons/types/Wind.png" alt="Wind"></th>
 
@@ -891,7 +891,7 @@
 <!-- Rock --> <td></td>
 <!-- Ice --> <td>-d</td>
 <!-- Metal --> <td></td>
-<!-- Sound --> <td>+c</td>
+<!-- Sound --> <td>+d</td>
 <!-- Gravity --> <td>-d</td>
 <!-- Time --> <td></td>
 
@@ -995,7 +995,7 @@
 <!-- Rock --> <td></td>
 <!-- Ice --> <td>-c</td>
 <!-- Metal --> <td></td>
-<!-- Sound --> <td>+c</td>
+<!-- Sound --> <td>+d</td>
 <!-- Gravity --> <td>-d</td>
 <!-- Time --> <td></td>
 
@@ -1100,7 +1100,7 @@
 <!-- Ice --> <td>-</td>
 <!-- Metal --> <td>+</td>
 <!-- Sound --> <td></td>
-<!-- Gravity --> <td>n+</td>
+<!-- Gravity --> <td>n+h</td>
 <!-- Time --> <td></td>
 
 <!-- Light --> <td></td>
@@ -1117,7 +1117,7 @@
 <!-- Robot --> <td class="Robot">+</td>
 
 <!-- Fighter --> <td></td>
-<!-- Flying --> <td>+</td>
+<!-- Flying --> <td>+h</td>
 <!-- Plant --> <td>-</td>
 <!-- Ghost --> <td>></td>
 
@@ -1461,7 +1461,7 @@
 <!-- Sand --> <td>?-</td>
 <!-- Earth --> <td>?-</td>
 <!-- Rock --> <td>-st!</td>
-<!-- Ice --> <td>- & -st!</td>
+<!-- Ice --> <td>-</td>
 <!-- Metal --> <td>-st!</td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
@@ -1513,7 +1513,7 @@
 <!-- Sand --> <td></td>
 <!-- Earth --> <td></td>
 <!-- Rock --> <td></td>
-<!-- Ice --> <td>+</td>
+<!-- Ice --> <td>+bp</td>
 <!-- Metal --> <td></td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
@@ -1532,7 +1532,7 @@
 <!-- Digital --> <td class="Digital"></td>
 <!-- Robot --> <td class="Robot">-</td>
 
-<!-- Fighter --> <td>-</td>
+<!-- Fighter --> <td>-h</td>
 <!-- Flying --> <td>?-</td>
 <!-- Plant --> <td>+ & +st</td>
 <!-- Ghost --> <td></td>
@@ -1558,7 +1558,7 @@
 
 <!-- Normal --> <td>?+</td>
 
-<!-- Fire --> <td>-h*</td>
+<!-- Fire --> <td>-d</td>
 <!-- Water --> <td></td>
 <!-- Electric --> <td>-d</td>
 <!-- Wind --> <td></td>
@@ -1610,14 +1610,14 @@
 
 <!-- Normal --> <td>+</td>
 
-<!-- Fire --> <td>-</td>
-<!-- Water --> <td>-</td>
+<!-- Fire --> <td>-d</td>
+<!-- Water --> <td>-d</td>
 <!-- Electric --> <td>-d</td>
 <!-- Wind --> <td></td>
-<!-- Sand --> <td>-</td>
+<!-- Sand --> <td>-d</td>
 <!-- Earth --> <td></td>
 <!-- Rock --> <td></td>
-<!-- Ice --> <td>-</td>
+<!-- Ice --> <td>-d</td>
 <!-- Metal --> <td></td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
@@ -1639,7 +1639,7 @@
 <!-- Fighter --> <td>+</td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td></td>
-<!-- Ghost --> <td>+</td>
+<!-- Ghost --> <td>+bp</td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -1708,24 +1708,24 @@
 </tr>
 
 
-<!--  TODO:    1 ▶ Robot (10/8/2)
+<!--  TODO:    1 ▶ Robot (10/6/4)
 ◈──────────────────────────────────────────────────────◈ -->
 <tr class="Robot"><th scope="row"><img class="type_icon" src="../images/game/icons/types/Robot.png" alt="Robot"></th>
 
 <!-- Normal --> <td>+</td>
 
-<!-- Fire --> <td>-</td>
-<!-- Water --> <td>-</td>
+<!-- Fire --> <td>↓↓d</td>
+<!-- Water --> <td></td>
 <!-- Electric --> <td>↓↓d</td>
 <!-- Wind --> <td>+d</td>
-<!-- Sand --> <td>-</td>
+<!-- Sand --> <td></td>
 <!-- Earth --> <td>-d</td>
 <!-- Rock --> <td></td>
-<!-- Ice --> <td>-</td>
+<!-- Ice --> <td>-c</td>
 <!-- Metal --> <td></td>
-<!-- Sound --> <td>+c</td>
+<!-- Sound --> <td>+d</td>
 <!-- Gravity --> <td>-d</td>
-<!-- Time --> <td>+d</td>
+<!-- Time --> <td>+*</td>
 
 <!-- Light --> <td></td>
 <!-- Dark --> <td></td>
@@ -1743,7 +1743,7 @@
 <!-- Fighter --> <td>+</td>
 <!-- Flying --> <td></td>
 <!-- Plant --> <td>+st</td>
-<!-- Ghost --> <td>+</td>
+<!-- Ghost --> <td>+bp</td>
 
 <!-- Dragon --> <td style="display: none"></td>
 <!-- Dinosaur --> <td style="display: none"></td>
@@ -1773,7 +1773,7 @@
 <!-- Sand --> <td></td>
 <!-- Earth --> <td></td>
 <!-- Rock --> <td>+</td>
-<!-- Ice --> <td>+</td>
+<!-- Ice --> <td>+bp</td>
 <!-- Metal --> <td>+</td>
 <!-- Sound --> <td></td>
 <!-- Gravity --> <td></td>
@@ -1828,7 +1828,7 @@
 <!-- Ice --> <td>+d</td>
 <!-- Metal --> <td></td>
 <!-- Sound --> <td></td>
-<!-- Gravity --> <td>-d</td>
+<!-- Gravity --> <td>-c</td>
 <!-- Time --> <td>-d</td>
 
 <!-- Light --> <td></td>
@@ -1870,9 +1870,9 @@
 
 <!-- Normal --> <td></td>
 
-<!-- Fire --> <td>-</td>
+<!-- Fire --> <td>-c</td>
 <!-- Water --> <td>+d*</td>
-<!-- Electric --> <td>+</td>
+<!-- Electric --> <td>+c</td>
 <!-- Wind --> <td></td>
 <!-- Sand --> <td>+d*</td>
 <!-- Earth --> <td>-d</td>
@@ -1922,7 +1922,7 @@
 
 <!-- Normal --> <td>x</td>
 
-<!-- Fire --> <td>-</td>
+<!-- Fire --> <td>-d</td>
 <!-- Water --> <td></td>
 <!-- Electric --> <td>?-</td>
 <!-- Wind --> <td>-d</td>
@@ -1938,15 +1938,15 @@
 <!-- Light --> <td>-</td>
 <!-- Dark --> <td></td>
 <!-- Aura --> <td>-</td>
-<!-- Psychic --> <td>+</td>
-<!-- Magic --> <td>+</td>
+<!-- Psychic --> <td>+bp</td>
+<!-- Magic --> <td>+bp</td>
 
 <!-- Chemical --> <td>+d</td>
 <!-- Blade --> <td></td>
 <!-- Shot --> <td></td>
 <!-- Hi-Tech --> <td>-d</td>
 <!-- Digital --> <td class="Digital"></td>
-<!-- Robot --> <td class="Robot">0!</td>
+<!-- Robot --> <td class="Robot">>!</td>
 
 <!-- Fighter --> <td></td>
 <!-- Flying --> <td></td>
@@ -4568,46 +4568,49 @@
             if(td.textContent === 'n+'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n+.png" alt="+">' }
             if(td.textContent === 'n+*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n+*.png" alt="+">' }
             if(td.textContent === '+st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+st.png" alt="+">' }
-            // if(td.textContent === 'sk'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/sk.png" alt="+">' }
-            // if(td.textContent === '+b'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+b.png" alt="+">' }
-            if(td.textContent === '+c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+c.png" alt="+">' }
+
+            // if(td.textContent === '+c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+c.png" alt="+">' }
+            if(td.textContent === '+c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+.png" alt="+">' }
+
             if(td.textContent === '+h'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+h.png" alt="+">' }
             if(td.textContent === '+h!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+h!.png" alt="+">' }
-            // if(td.textContent === 'nc'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nc.png" alt="c">' }
+            if(td.textContent === 'n+h'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n+h.png" alt="+">' }
             if(td.textContent === '+bp'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+bp.png" alt="+">' }
-            // if(td.textContent === 'nbs'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nbs.png" alt="bs">' }
-            // if(td.textContent === 'bb'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/bb.png" alt="bb">' }
-            // if(td.textContent === 'nbb'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nbb.png" alt="bb">' }
             if(td.textContent === '+ & +st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/+ & +st.png" alt="+">' }
             if(td.textContent === '- & +st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & +st.png" alt="+-">' }
-            if(td.textContent === '-c & +*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-c & +*.png" alt="+-">' }
+
+            // if(td.textContent === '-c & +*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-c & +*.png" alt="+-">' }
+            if(td.textContent === '-c & +*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & +*.png" alt="+-">' }
+
             if(td.textContent === '-'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-.png" alt="-">' }
             if(td.textContent === 'n-'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n-.png" alt="-">' }
-            // if(td.textContent === '-*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-*.png" alt="-">' }
             if(td.textContent === '-st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-st.png" alt="-">' }
-            // if(td.textContent === 'n-st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n-st.png" alt="-">' }
             if(td.textContent === '-st!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-st!.png" alt="-">' }
-            // if(td.textContent === '-b'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-b.png" alt="-">' }
-            if(td.textContent === '-c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-c.png" alt="-">' }
+
+            // if(td.textContent === '-c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-c.png" alt="-">' }
+            if(td.textContent === '-c'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-.png" alt="-">' }
+
+            if(td.textContent === '-h'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-h.png" alt="-">' }
             if(td.textContent === '-h*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/-h*.png" alt="-">' }
-            // if(td.textContent === 's'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/s.png" alt="s">' }
-            // if(td.textContent === 'ns'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/ns.png" alt="s">' }
             if(td.textContent === '0'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/0.png" alt="0">' }
             if(td.textContent === 'n0'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n0.png" alt="0">' }
             if(td.textContent === '0!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/0!.png" alt="0">' }
             if(td.textContent === '>'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/>.png" alt=">">' }
-            // if(td.textContent === 'n>'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/n>.png" alt=">">' }
+            if(td.textContent === '>!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/>!.png" alt=">">' }
             if(td.textContent === '>*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/>*.png" alt=">">' }
             if(td.textContent === 'x'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/x.png" alt="x">' }
-            // if(td.textContent === 'nx'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/nx.png" alt="x">' }
-            // if(td.textContent === 'w'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/w.png" alt="-">' }
-            // if(td.textContent === 'x*'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/x*.png" alt="x">' }
             if(td.textContent === '- & -st'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & -st.png" alt="-">' }
             if(td.textContent === '- & -st!'){ td.innerHTML = '<img class="effect_icon" src="../images/game/icons/types/effect/- & -st!.png" alt="-">' }
 
 
             /* Ocultar observações na tabela: */
             if(
+                td.textContent === '+d' ||  // Bom defendendo.
+                td.textContent === '-d' ||  // Ruim defendendo.
+                td.textContent === '↓↓d' ||  // Muito ruim defendendo.
+                td.textContent === '+d*' ||  // Bom defendendo devido a uma habilidade.
+                td.textContent === '-d*' ||  // Ruim defendendo devido a uma habilidade.
+
                 td.textContent === '?' ||  // Possível interação positiva ou negativa.
                 td.textContent === '?+' ||  // Possível interação de +.
                 td.textContent === '?-' ||  // Possível interação de -.
