--- a/pages/skills.html
+++ b/pages/skills.html
@@ -286,7 +286,7 @@
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Impact.png" alt=" "><span>Impact</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Piercing.png" alt=" "><span>Piercing</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Intelligent.png" alt=" "><span>Intelligent</span></a></li>
-                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Special.png" alt=" "><span>Special</span></a></li>
+                        <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Blast.png" alt=" "><span>Blast</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Normal.png" alt=" "><span>Normal</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Flying.png" alt=" "><span>Flying</span></a></li>
                         <li><a onclick="choice_option(this); func_skills_types_choices(this)"><img src="../images/game/icons/types/Fighter.png" alt=" "><span>Fighter</span></a></li>
@@ -576,7 +576,7 @@
 
 <tr class="hiddenSkill">
     <td class='Name'><span>?1</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Dragon.png' alt=''><img class='icon_type' src='../images/game/icons/types/Aura.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Blade.png' alt=''><img class='icon_type' src='../images/game/icons/types/Aura.png' alt=''></span></td>
     <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'>Act first<!-- Act last --></span>
@@ -610,7 +610,7 @@
 
 <tr class="hiddenSkill">
     <td class='Name'><span>?2</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Magnetic.png' alt=''><img class='icon_type' src='../images/game/icons/types/Laser.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Metal.png' alt=''><img class='icon_type' src='../images/game/icons/types/Fire.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -645,7 +645,7 @@
 
 <tr class="hiddenSkill">
     <td class='Name'><span>?3</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Plasma.png' alt=''><img class='icon_type' src='../images/game/icons/types/Gravity.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Dark.png' alt=''><img class='icon_type' src='../images/game/icons/types/Gravity.png' alt=''></span></td>
 
     <td class='Damage'><span></span></td>
     <td class='Effect'>
@@ -680,7 +680,7 @@
 
 <tr class="hiddenSkill">
     <td class='Name'><span>?4</span></td>
-    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Beast.png' alt=''><img class='icon_type' src='../images/game/icons/types/Time.png' alt=''></span></td>
+    <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Electric.png' alt=''><img class='icon_type' src='../images/game/icons/types/Time.png' alt=''></span></td>
     <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'><!-- Act first, Act last --></span>
@@ -2480,8 +2480,9 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     -->
 
     <script defer src="../framework/scripts/defaults.js"></script>
-    <script async src="../../Development/script.js"></script>
+    <!-- <script async src="../../Development/script.js"></script> -->
     <script defer src="../scripts/identity.js"></script>
+    <script defer src="../scripts/skills.js"></script>
     
 </body> 
 </html>
