--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -103,15 +103,9 @@
     ────────────────────────────────────────────────────── --> 
 
     <footer></footer>
-
-    <!-- 
-        Importante: Mesmo com o atributo 'defer', os <script>'s devem ser colocados no 
-        final do arquivo HTML para garantir que a página seja renderizada corretamente.
-    -->
-
-    <script defer src="../framework/scripts/defaults.js"></script>
-    <script async src="../../Development/script.js"></script>
-    <script defer src="../scripts/identity.js"></script>
+    
+   <script src="../framework/scripts/defaults.js"></script>
+   <script src="../scripts/identity.js"></script>
 
 </body> 
 </html>
